--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,23 +2,22 @@ name: Python application test with Github actions
 on: [push]
 jobs:
   build:
-	runs-on: ubuntu-latest
-	steps:
-	- uses: actions/checkout@v2
-	- name: set up Python 3.8
-	  uses: actions/setup-python@v1
-	  with:
-		python-version: 3.8
-	- name: Install dependencies
-	  run: |
-	    make install
-	- name: Lint with Pylint
-	  run: |
-	    make lint
-	- name: Test with Pytest
-	  run: |
-	    make test
-	- name: Format code with python black
-	  run: |
-	    make format
-		
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with: 
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        make install
+    - name: Lint with Pylint
+      run: |
+        make lint
+    - name: Test with Pytest
+      run: |
+        make test
+    - name: Format code with python black
+      run: |
+        make format
